# Hindsight

./: .gitignore  pyproject.toml
src/hindsight/: data_explorer.py  filter.py  primitives.py
