[project]
name = "Hindsight"
version = "0.0.1"
authors = [
  { name="Who What", email="whowhat@where.when" },
]
description = "Financial Data Processing Library"
requires-python = ">=3.10"
license = "MIT"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # or ["."]